--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 .chef {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 400px;
     height: auto;
+
+}
+
+body {
+    background-color: pink;
 }
