--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,18 @@
 body {
     background-color: pink;
 }
+
+h1 {
+    color: rgb(100, 172, 240);
+    text-align: center;
+    font-family: Luminari, fantasy
+}
+
+.lasagna,
+.bacon,
+.sandwich {
+    background-color:rgb(100, 172, 240);
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+}
