Add font-family to title and buttons

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ body {
     background-color: pink;
 }
 
-h1 {
+.title {
     color: rgb(100, 172, 240);
     text-align: center;
-    font-family: Luminari, fantasy
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .lasagna,
@@ -24,4 +24,5 @@ h1 {
     color: white;
     font-size: 20px;
     font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
 }
